--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "framer-motion": "^12.0.6",
+    "jwt-decode": "^4.0.0",
     "motion": "^11.18.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
